<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="lab_work_text">Laboratory works app</string>
    <string name="lab1_button_text">Laboratory work 1</string>
    <string name="lab2_button_text">Laboratory work 2</string>
    <string name="lab3_button_text">Laboratory work 3</string>
    <string name="lab4_button_text">Laboratory work 4</string>
    <string-array name="languages">
        <item>Kotlin</item>
        <item>Java</item>
        <item>Python</item>
        <item>JavaScript</item>
        <item>C#</item>
        <item>C++</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="result_text">You choose </string>
    <string name="database">Database</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="empty">Database is empty</string>
    <string name="successful">Data written successfully</string>
    <string name="open_file">Open file</string>
    <string name="open_video">Open video</string>
    <string name="open_audio">Open audio</string>
    <string name="open_example">Open example</string>
    <string name="open_local">Open local file</string>
    <string name="open_link">Open link</string>
    <string name="link">Link</string>
    <string name="apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>